[package]
name = "vdb-rs"
version = "0.1.0"
edition = "2021"
authors = ["Traverse-Research <support@traverseresearch.nl>"]
description = "OpenVDB manipulation library."
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Traverse-Research/vdb-rs"
repository = "https://github.com/Traverse-Research/vdb-rs"
keywords = ["voxel", "vdb"]
categories = ["rendering"]
include = ["src", "LICENSE"]
documentation = "https://docs.rs/vdb-rs"

[badges]
maintenance = { status = "actively-developed" }

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"

[profile.dev.package.'*']
opt-level = 's'
debug = true

[dependencies]
byteorder = "1.4"
thiserror = "1"
glam = "0.23"
bitvec = "1"
half = { version = "2.2.1", features = ["bytemuck"] }
bitflags = "1"
bytemuck = { version ="1.13", features = ["extern_crate_alloc"] }
flate2 = "1"
blosc-src = "0.1.1"
log = "0.4"

[dev-dependencies]
bevy = "0.9"
bevy_flycam  = "0.9"
bevy-aabb-instancing = { git = "https://github.com/ForesightMiningSoftwareCorporation/bevy-aabb-instancing.git", rev = "fdb22b96dd3bc0c98430221c425fa83fc5ad001b" }
smooth-bevy-cameras = { git = "https://github.com/olegomon/smooth-bevy-cameras", rev = "331959876e1c940f04e3701b214fa05ee7936384" }
