[package]
name = "vdb-rs"
version = "0.2.0"
edition = "2021"
authors = ["Traverse-Research <support@traverseresearch.nl>"]
description = "OpenVDB manipulation library."
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Traverse-Research/vdb-rs"
repository = "https://github.com/Traverse-Research/vdb-rs"
keywords = ["voxel", "vdb"]
categories = ["rendering"]
include = ["src", "LICENSE"]
documentation = "https://docs.rs/vdb-rs"

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"

[profile.dev.package.'*']
opt-level = 's'
debug = true

[dependencies]
bitflags = "1"
bitvec = "1"
blosc-src = { version = "0.2.1", features = ["lz4"] }
bytemuck = { version = "1.13", features = ["extern_crate_alloc"] }
byteorder = "1.4"
flate2 = "1"
glam = "0.23"
half = { version = "2.2.1", features = ["bytemuck"] }
log = "0.4"
thiserror = "1"

[dev-dependencies]
bevy = { version = "0.9", default-features = false, features = ["bevy_pbr"] }
bevy-aabb-instancing = { git = "https://github.com/ForesightMiningSoftwareCorporation/bevy-aabb-instancing.git", rev = "fdb22b96dd3bc0c98430221c425fa83fc5ad001b" }
bevy_flycam = "0.9"
smooth-bevy-cameras = { git = "https://github.com/olegomon/smooth-bevy-cameras", rev = "331959876e1c940f04e3701b214fa05ee7936384" }
